Add song request

--- a/templates/existing_rsvp.html
+++ b/templates/existing_rsvp.html
@@ -24,6 +24,7 @@
                 {% if day_guest %}
                 <th>Needs Transport</th>
                 {% endif %}
+                <th>Song Request</th>
             </tr>
             <tbody>
                 {% for guest in guests %}
@@ -35,6 +36,7 @@
                     <td>{{guest.dietDetails}}</td>
                     {% if day_guest %}
                     <td>{% if guest.needsTransport == 'true' %}Yes{% else %}No{% endif %}</td>
+                    <td>{{guest.songRequest}}</td>
                     {% endif %}
 				</tr>
                 {% endfor %}
