--- a/templates/new_rsvp.html
+++ b/templates/new_rsvp.html
@@ -221,7 +221,7 @@
 
             <form action="javascript:void()" class='ml-2'>
                 <div class='form-row' id="message">
-                    If you would like, please use this entry to leave a personal message for Edward and Bethan:<br/>
+                    If you would like, please use this entry to leave a personal message for Edward and Bethan (this will only be visible to Edward and Bethan):<br/>
                     <textarea id='message_text' class="form-control" rows='3' >{{ message }}</textarea>
                 </div>
             </form>
