--- a/templates/site.html
+++ b/templates/site.html
@@ -346,14 +346,23 @@
             <div class="container text-center">
                 <div class="row flex-column-reverse flex-lg-row">
                     <div class="col-lg-6 text-left white card card-body" >
-                        <p>Our reception will take place at Edward's Grandma's
-                        garden in Offham, West Malling. We will be
-                        providing some transport from the church to the
-                        field so please let us know in the RSVP if you will
-                        be using this.
+                        <p>
+                            Our reception will take place at Edward's Grandma's
+                            garden in Offham, West Malling. We will be
+                            providing some transport from the church to the
+                            field so please let us know in the RSVP if you will
+                            be using this.
                         </p>
-                        <p>Parking is not possible on site, so we ask you to park in a nearby
-                          field that will be signposted on the day. (Please click more for details)</p>
+                        <p>
+                            Parking is not possible on site, so we ask you to
+                            park in a nearby field that will be signposted on
+                            the day. (Please click more for details)
+                        </p>
+                        <p>
+                            Please note: there will be a <strong>free bar
+                            </strong>between 18:00 and midnight serving Wine,
+                            Beer, and a Selection of Spirits and Soft Drinks.
+                        </p>
                     </div>
                     <div class="col-lg-6">
                         <img src='static/images/windyridge.jpg' class='scaled-image mb-2' />
