Add link to PayPal

--- a/templates/site.html
+++ b/templates/site.html
@@ -585,14 +585,19 @@
             <div class="container">
                 <div class="row white card card-body">
                     <p>
-                    As we have been living together for two years and plan
-                    to live abroad in the near future, we kindly ask that you
-                    don't give us any physical gifts. Your presence at our day
-                    is the most important thing to us. However, if you would
-                    like to give a gift, we would be extremely appreciative of
-                    any donations towards our honeymoon.  We're planning on
-                    visiting Sri Lanka; we'll post a link to a register on this
-                    page as soon as we've booked something!
+                        As we have been living together for two years and plan
+                        to live abroad in the near future, we kindly ask that
+                        you dont't give us any physical gifts.
+                    </p>
+                    <p>
+                        Your presence is the most important thing to us.
+                    <p>
+                        However, if you would like to give a gift, we would be
+                        extremely appreciative of any donations towards our
+                        honeymoon. We will be visiting Sri Lanka. For
+                        your convenience here is a link to our
+                        <a href='https://paypal.me/pools/c/84lumMBOTW'>
+                        PayPal Pool</a>.
                     </p>
                 </div>
             </div>
