--- a/templates/site.html
+++ b/templates/site.html
@@ -587,7 +587,7 @@
                     <p>
                         As we have been living together for two years and plan
                         to live abroad in the near future, we kindly ask that
-                        you dont't give us any physical gifts.
+                        you don't give us any physical gifts.
                     </p>
                     <p>
                         Your presence is the most important thing to us.
