Add distances to church

--- a/templates/site.html
+++ b/templates/site.html
@@ -528,23 +528,23 @@
                        after midnight:
                     </p>
                     <ul>
-                        <li>Holiday Inn (The Posthouse) - 2.1 miles</li>
-                        <li>Premier Inn (The Beafeater) - 1.9 miles</li>
+                        <li>Holiday Inn (The Posthouse) - 2.1 miles from Offham</li>
+                        <li>Premier Inn (The Beafeater) - 1.9 miles from Offham</li>
                     </ul>
                     <p>
                         In the direction of Maidstone, Larkfield has two hotels:
                     </p>
                     <ul>
-                        <li>Premier Inn (Castle Lake) - 2.9 miles</li>
-                        <li>Priory Hotel - 2.1 miles</li>
+                        <li>Premier Inn (Castle Lake) - 2.9 miles from Offham</li>
+                        <li>Priory Hotel - 2.1 miles form Offham</li>
                     </ul>
                     <p>
-                        Maidstone has many more hotels. Many are out of town, but within walking
-                        distance of the church is:
+                        Maidstone has many more hotels. Many are out of town,
+                        but within walking distance of the church is:
                     </p>
                     <ul>
-                        <li>Travelodge Maidstone Centre </li>
-                        <li>The Townhouse</li>
+                        <li>Travelodge Maidstone Centre - 0.8 miles from the Church</li>
+                        <li>The Townhouse - 0.6 miles from the Church</li>
                     </ul>
                     <p>
                         There are also a few 'boutique' hotels and B&amp;Bs in the area.
