--- a/templates/site.html
+++ b/templates/site.html
@@ -594,7 +594,10 @@
                     <p>
                         However, if you would like to give a gift, we would be
                         extremely appreciative of any donations towards our
-                        honeymoon. We will be visiting Sri Lanka.
+                        honeymoon. We will be visiting Sri Lanka. For
+                        your convenience here is a link to our
+                        <a href='https://paypal.me/pools/c/84lumMBOTW'>
+                        PayPal Pool</a>.
                     </p>
                 </div>
             </div>
