Change some bits

--- a/templates/site.html
+++ b/templates/site.html
@@ -280,8 +280,9 @@
                             the church. This is the church in which Bethan was christened, later
                             attended play group in, and then went to for dance lessons and Brownies.
                         </p>
-                        <p>There is limited on street parking by the church, please click More for
-                           information on nearby pay and display car parks.</p?
+                        <p>There is limited on street parking by the church. We have been given permission
+                           for guests to park in the Maidstone Grammar Schhol car park. Please click More for
+                           information on this, and nearby pay and display car parks.</p?
                     </div>
                 </div>
             </div>
@@ -296,9 +297,17 @@
                 <div class="card card-body">
                     <div class='container justify-content-center'>
                         <div class='row justify-content-left text-left'>
-                            <p>The church is located near Maidstone Grammar School. </p>
-                            <p>There is limited on street parking around the
-                            church, and a number of nearby paid car parks</p>
+                            <p>
+                                The church is located near
+                                <a href='https://goo.gl/maps/dSYEVfGQbnG2'>Maidstone Grammar School</a>.
+                                We have been given permission for 30-40 vehicles to park in the school
+                                car park. The entrance is at the West end of the school by the gatehouse
+                                and will be sign posted on the day.
+                            </p>
+                            <p>
+                                In the case of overflow, there is limited on street parking around the
+                                church, and a number of nearby paid car parks
+                            </p>
                             <p>
                             These include:
                             <ul>
@@ -549,10 +558,6 @@
                     <p>
                         There are also a few 'boutique' hotels and B&amp;Bs in the area.
                     </p>
-                    <p>
-                        We are still negotiating camping space with the venue management, watch this
-                        space for more developments on this.
-                    </p>
 
                     <h4>Taxis</h4>
                     <p>Unfortunately there aren't many Ubers in Offham and hailing a cab can be quite tricky.
@@ -571,6 +576,10 @@
                             - 01732 882020
                         </li>
                     </ul>
+                    <p>
+                        <strong>Note:</strong> when booking a taxi, please ask to meet them at the bus stop
+                        as it will be difficult for them to turn around at the bottom of Tower Hill
+                    </p>
                 </div>
             </div>
         </div>
