--- a/templates/site.html
+++ b/templates/site.html
@@ -490,21 +490,11 @@
                             <p>Menu <strong>TBC</strong></p>
                             <h4>Pizza</h4>
                             <ul>
-                                <li>Marinara Pizza</li>
-                                <li>Margherita Pizza</li>
-                                <li>Pepperoni Pizza</li>
-                                <li>Napoletana Pizza</li>
-                                <li>Prosciutto e Funghi Pizza</li>
-                                <li>4 Formaggi, Noci, and Porcini Pizza</li>
-                                <li>Calabrese Pizza</li>
-                                <li>Hawaiian Pizza</li>
-                                <li>4 Stagioni Pizza</li>
-                                <li>Vegetariana Pizza</li>
-                            </ul>
-                            <h4>Calzoni</h4>
-                            <ul>
-                                <li>Verace Calzoni</li>
-                                <li>Italian Salumi Calzoni</li>
+                                <li>Margherita</li>
+                                <li>Salame Milano</li>
+                                <li>Ham &amp; Mushroom</li>
+                                <li>Mix Salami</li>
+                                <li>Vegetariana</li>
                             </ul>
                         </div>
                     </div>
