--- a/templates/upload.html
+++ b/templates/upload.html
@@ -109,6 +109,10 @@
                   margin-bottom:0vh;
             }
 
+            img {
+                    image-orientation: from-image;
+            }
+
             .scaled-image {
                 width:100%
             }
