--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
 
 				$.post("/validate_password", { password }, (data) => {
 					if (data === "success") {
-					   window.location.href = "/gallery";
+					   window.location.href = "/site";
 					}
 					else {
 						alert("Incorrect password, try again or contact Edward or Bethan!");
