--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -44,7 +44,9 @@
             img {
                 image-orientation: from-image;
                 object-fit: cover;
-                height: 100%;
+                width: 100%;
+                height: 35vh;
+                margin-bottom: 4px;
             }
         </style>
 
@@ -70,7 +72,7 @@
                     {% for image in images %}
                     <div class="col-lg-4">
                         <a href='/static/user_uploads/{{image.full_image}}'>
-                        <img src='/static/user_uploads/{{image.thumbnail}}' class="img-thumbnail img-fluid"/>
+                        <img src='/static/user_uploads/{{image.thumbnail}}'/>
                         </a>
                     </div>
                     {% endfor %}
