--- a/templates/photo_landing.html
+++ b/templates/photo_landing.html
@@ -62,16 +62,14 @@
                 <h2>Photo upload login</h2>
                 <br />
                 <h4>Please enter your email address and the password from your invite</h4>
-                <form id='form' class='form-inline justify-content-center' action="javascript:void()">
+                <form id='form' class='justify-content-center' action="javascript:void()">
 					<div class="form-row">
-                        <label class="ml-2 mr-1">Email: </label>
-						<input id="email" type="text" class="form-control mr-2"/>
+						<input id="email" type="text" class="form-control mr-4 ml-4 mb-1" placeholder="Your email address"/>
                     </div>
 					<div class="form-row">
-                        <label class="ml-2 mr-1">Password: </label>
-						<input id="password" type="text" class="form-control mr-2"/>
+						<input id="password" type="text" class="form-control mr-4 ml-4 mb-1" placeholder="The password"/>
                     </div>
-					<div class="form-row">
+					<div class="form-row justify-content-center">
 						<button onclick="validatePassword()" class="btn btn-primary">&lt;GO&gt;</button>
 					</div>
                 </form>
