--- a/templates/photo_landing.html
+++ b/templates/photo_landing.html
@@ -64,7 +64,7 @@
                 <h4>Please enter your email address and the password from your invite</h4>
                 <form id='form' class='justify-content-center' action="javascript:void()">
 					<div class="form-row">
-						<input id="email" type="text" class="form-control mr-4 ml-4 mb-1" placeholder="Your email address"/>
+						<input id="email" type="email" class="form-control mr-4 ml-4 mb-1" placeholder="Your email address"/>
                     </div>
 					<div class="form-row">
 						<input id="password" type="text" class="form-control mr-4 ml-4 mb-1" placeholder="The password"/>
